--- a/Sections/10_Chapter_3.Rmd
+++ b/Sections/10_Chapter_3.Rmd
@@ -56,8 +56,8 @@ Our study underscores the importance of cell-specific approaches in placental st
 
 ### Major human placental cell types have highly specific methylation patterns
 
-To characterize the dynamics of CpG methylation during human placental development, we performed microarray profiling (Illumina EPIC methylation array, n CpGs=737,050 after removal unreliable probes) in samples of matched CV and 4 fluorescence-activated cell sorted (FACS) cell- types (Figure \@ref(fig:figb1)A ), from 9 first trimester (6.4--13 weeks gestational age) and 19 term (36.4--40.4 weeks) pregnancies (Table \@ref(tab:ch3tab1)). Immunofluorescence staining of flow cytometry sorted cells (Figure \@ref(fig:figb1)B-E) determined high purity for TB (KRT7+, 97%), HB (CD68+, 95%), and EC (CD31+, 88%) and lower purity for SC (VIM+, 73%). Several bioinformatic approaches, such as array-based sex inference [@heiss2018], and genotype clustering, were used to identify contamination with maternal DNA (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figures S2A-F, Additional File [2](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM2): Supplementary methods).
-We restricted analysis to samples with an estimated maternal cell contamination of less than 35%, with the majority of first trimester samples having less than 20%, and term samples less than 10% (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S2G).
+To characterize the dynamics of CpG methylation during human placental development, we performed microarray profiling (Illumina EPIC methylation array, n CpGs=737,050 after removal unreliable probes) in samples of matched CV and 4 fluorescence-activated cell sorted (FACS) cell- types (Figure \@ref(fig:figb1)A ), from 9 first trimester (6.4--13 weeks gestational age) and 19 term (36.4--40.4 weeks) pregnancies (Table \@ref(tab:ch3tab1)). Immunofluorescence staining of flow cytometry sorted cells (Figure \@ref(fig:figb1)B-E) determined high purity for TB (KRT7+, 97%), HB (CD68+, 95%), and EC (CD31+, 88%) and lower purity for SC (VIM+, 73%). Several bioinformatic approaches, such as array-based sex inference [@heiss2018], and genotype clustering, were used to identify contamination with maternal DNA (Figure \@ref(fig:figb2)A-F).
+We restricted analysis to samples with an estimated maternal cell contamination of less than 35%, with the majority of first trimester samples having less than 20%, and term samples less than 10% (Figure \@ref(fig:figb2)G).
 This resulted in the exclusion of: 6 HB, 1 EC, and 4 TB from first trimester, and 1 HB from term samples.
 Final sample numbers in all downstream analyses are shown in Table \@ref(tab:ch3tab1).
 
@@ -74,25 +74,25 @@ kableExtra::kbl(
 To determine major factors that drive DNAm variation, we first applied principal components analysis (PCA) to all 126 CV and cell samples.
 Three distinct clusters were observed when samples were projected onto PCs 1 and 2 (total percent variation explained = 64%; Figure \@ref(fig:ch3fig1)a).
 Samples in these clusters were i) TB and CV, ii) SC and EC, and iii) HB.
-Cell type was strongly associated with the first 3 PCs (*p*\<0.001), while gestational age (i.e. "Trimester") was the second strongest identifiable factor driving DNAm variation, being associated with PCs 4 and 5 (*p*\<0.001, Figure \@ref(fig:figb3) S3).
+Cell type was strongly associated with the first 3 PCs (*p*\<0.001), while gestational age (i.e. "Trimester") was the second strongest identifiable factor driving DNAm variation, being associated with PCs 4 and 5 (*p*\<0.001, Figure \@ref(fig:figb3)).
 Technical variables such as "Batch", "Row", and "Chip ID" explained less variation in comparison to biological variables.
 Sex was associated with PCs 6 and 8--11 (*p*\<0.01).
 The close clustering of TB with CV (original unsorted tissue) is consistent with this being the predominant cell type in whole villi.
 
 We next wanted to define the extent and patterns of cell-specific DNAm.
-At a Bonferroni-adjusted *p*\<0.01 and an absolute difference in mean methylation (Δβ)\>25%, we found 75,000--135,553 and 9136--117,528 (term and first trimester, respectively) cell-specific differentially methylated CpGs (DMCs; Figure \@ref(fig:ch3fig1)b; Additional File [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM3): first trimester DMCs, Additional File [4](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM4): term DMCs).
+At a Bonferroni-adjusted *p*\<0.01 and an absolute difference in mean methylation (Δβ)\>25%, we found 75,000--135,553 and 9136--117,528 (term and first trimester, respectively) cell-specific differentially methylated CpGs (DMCs; Figure \@ref(fig:ch3fig1)b).
 The differences in the number of DMCs between first trimester (*n* = 3--9) and term (*n* = 18--19) are likely due to less power from the smaller sample size for first trimester samples compared to term.
 When comparing across term samples, we detected more DMCs for TB and HB (*n* = 135,553 and 130,733) compared to SC and EC (80,153 and 75,525; respectively).
 This was also true for first trimester samples: there were more DMCs for TB and HB (117,528 and 78,309) than SC and EC (9136 and 18,867).
 We further classified these DMCs by whether their methylation was in the "less than" (compared to all other cell types) or "more than" direction.
 Most TB DMCs were in the less methylated direction (61% - first trimester, 88% term), whereas HB DMCs were often more methylated than other cell types (74% - first, 72% term).
-A list of 38,656--86,355 differentially methylated regions (DMRs) were identified (FDR\<0.01) using the R package *dmrcate* for each cell type and gestational age; these results are presented in Additional Files [5](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM5) and [6](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM6).
+A list of 38,656--86,355 differentially methylated regions (DMRs) were identified (FDR\<0.01) using the R package *dmrcate* for each cell type and gestational age.
 
-To characterize the functional relevance of placental cell-specific DMCs, we tested these CpGs for enrichment in various genomic elements (chi-squared test, FDR\<0.05; term DMCs in Figure \@ref(fig:ch3fig1)c, first trimester DMCs in Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S4). Cell-specific DMCs were depleted in gene-related elements such as promoters, exons, 5′ UTRs, and 3′ UTRs. Instead, we saw significant enrichment in non-coding regions, such as open seas, CpG island shores, intergenic regions, introns, and enhancers. The level and direction of enrichment was highly consistent across first trimester and term cell DMCs. Less methylated DMCs were enriched for placental PMD regions [@schroeder2013] for TB but depleted for all other cell types.
+To characterize the functional relevance of placental cell-specific DMCs, we tested these CpGs for enrichment in various genomic elements (chi-squared test, FDR\<0.05; term DMCs in Figure \@ref(fig:ch3fig1)c, first trimester DMCs in Figure \@ref(fig:figb4). Cell-specific DMCs were depleted in gene-related elements such as promoters, exons, 5′ UTRs, and 3′ UTRs. Instead, we saw significant enrichment in non-coding regions, such as open seas, CpG island shores, intergenic regions, introns, and enhancers. The level and direction of enrichment was highly consistent across first trimester and term cell DMCs. Less methylated DMCs were enriched for placental PMD regions [@schroeder2013] for TB but depleted for all other cell types.
 Functional enrichment analysis tested if GO or KEGG pathways were associated with cell-specific DMCs.
 We adjusted for the variable number of CpGs per gene to reduce bias in gene set analysis.
 EC and HB DMCs were enriched (FDR\<0.05) for terms related to intercellular interactions such as "cellular response to external stimulus", whereas stromal DMCs yielded more intracellular processes related to maintaining tissue structure, such as "actin cytoskeleton" and "collagen binding".
-Trophoblast DMCs were enriched for two KEGG pathways, "ECM-receptor interaction" and "Regulation of actin cytoskeleton" (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S5 and S6).
+Trophoblast DMCs were enriched for two KEGG pathways, "ECM-receptor interaction" and "Regulation of actin cytoskeleton" (Table \@ref(tab:tabb5) and \@ref(tab:tabb7)).
 
 <!--- Insert Figure 1 --->
 
@@ -105,7 +105,7 @@ knitr::include_graphics(here::here('images', 'ch3', 'Figure1.pdf'))
 ### Cell-specific DNAm occurs at highly functionally-relevant genes
 
 A number of regions with a high density of DMCs were located in or nearby functionally- and pathology-relevant genes.
-*TFAP2C*, which encodes a pan-trophoblast marker, were highly methylated in TB compared to other cell types in the promoter and upstream region; whole CV showed a similar profile to TB (Figure \@ref(fig:ch3fig1)d). This region contains several predicted enhancers [@genehanc], which may require DNAm for recruiting transcription factors. Alternatively, other regions more distal to TFAP2C may be responsible for regulation of this gene's transcription. Other trophoblast-specific markers, such as *GCM1*, *MMP2*, *SLC1A5*, and *GATA3*, also had regions of highly cell-specific DNAm localized near their transcription start sites (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Fig. S5). We also observed high DMC density regions in genes for which placental DNAm and/or expression differences have been associated with preeclampsia [@wilson2018], including *INHBA* (Figure \@ref(fig:ch3fig1)e), *JUNB, TEAD3*, *NDRG1*, and *CGA* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S6). Out of 540 preeclampsia-associated CpGs previously identified by Wilson et al. 2018 that were also captured in our processed data, a statistically significant (Bonferroni adjusted *p*\<0.01) fraction ranging from 19.4--27.2% were also identified as exhibiting cell-specific DNAm for term samples (Table \@ref(tab:ch3tab2)) [@wilson2018].
+*TFAP2C*, which encodes a pan-trophoblast marker, were highly methylated in TB compared to other cell types in the promoter and upstream region; whole CV showed a similar profile to TB (Figure \@ref(fig:ch3fig1)d). This region contains several predicted enhancers [@genehanc], which may require DNAm for recruiting transcription factors. Alternatively, other regions more distal to TFAP2C may be responsible for regulation of this gene's transcription. Other trophoblast-specific markers, such as *GCM1*, *MMP2*, *SLC1A5*, and *GATA3*, also had regions of highly cell-specific DNAm localized near their transcription start sites (Figure \@ref(fig:figb5)). We also observed high DMC density regions in genes for which placental DNAm and/or expression differences have been associated with preeclampsia [@wilson2018], including *INHBA* (Figure \@ref(fig:ch3fig1)e), *JUNB, TEAD3*, *NDRG1*, and *CGA* (Figure \@ref(fig:figb6)). Out of 540 preeclampsia-associated CpGs previously identified by Wilson et al. 2018 that were also captured in our processed data, a statistically significant (Bonferroni adjusted *p*\<0.01) fraction ranging from 19.4--27.2% were also identified as exhibiting cell-specific DNAm for term samples (Table \@ref(tab:ch3tab2)) [@wilson2018].
 
 <!-- Insert Table 2 -->
 
@@ -179,27 +179,16 @@ In contrast, DNAm in HB often deviated from the other cell types, typically show
 SC and EC often "followed" CV DNAm levels, but were not nearly as consistent as TB cells in this respect.
 
 We also looked at imprinted differentially methylated regions (DMRs) that are covered by the EPIC array.
-While many imprinted DMRs are maintained in somatic tissues, others are highly specific to the placenta [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016]. To evaluate whether placental-specific imprinting is maintained in constituent placental cell populations, we first combined the results from four studies [@hanna2016; @court2014; @sanchez-delgado2016; @zink2018] to form a list (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S7) of placental-specific (n CpGs = 981; n genes = 111) and non-placental specific (i.e. imprinted in other tissues) DMRs (n CpGs = 1085; n genes = 307). To determine if CpGs were intermediately-methylated, as would be expected for an imprinted DMR, we counted the proportion of CpGs with an average DNAm across both alleles that were in a range between 25 and 75% methylation. For CpGs in non-placental specific imprinted DMRs, the mean percentage of CpGs in the intermediate range across each cell type and in CV in term samples was 69% (Figure \@ref(fig:ch3fig4)d). For placental-specific imprinted CpGs, the percentage of CpGs falling into this DNAm range was much more variable. As expected, in the term placental samples, TB and CV had a high percentage (76, 81%, respectively) of CpGs in this DNAm range. SC and EC had a lower, but still a majority, percentage of CpGs in this range (64, 64%, respectively). In contrast, HB cells had almost no CpGs (12%) in this range; almost all CpGs were unmethylated (\<25%). These proportions were similar in first trimester samples, except with EC and SC showing less intermediate methylation and more CpGs with less methylation at placental-specific imprints (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S7A). These results suggest that placental-specific imprinting is maintained primarily in TB, and to a lesser degree EC and SC, and is virtually absent in HB. When considering the parental origin of imprinted DNAm [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016; @zink2018], paternally- methylated regions had more CpGs falling within 25--75% as compared to maternal ones (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S7BC).
+While many imprinted DMRs are maintained in somatic tissues, others are highly specific to the placenta [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016]. To evaluate whether placental-specific imprinting is maintained in constituent placental cell populations, we first combined the results from four studies [@hanna2016; @court2014; @sanchez-delgado2016; @zink2018] to form a list (\@ref(tab:tabb7)) of placental-specific (n CpGs = 981; n genes = 111) and non-placental specific (i.e. imprinted in other tissues) DMRs (n CpGs = 1085; n genes = 307). To determine if CpGs were intermediately-methylated, as would be expected for an imprinted DMR, we counted the proportion of CpGs with an average DNAm across both alleles that were in a range between 25 and 75% methylation. For CpGs in non-placental specific imprinted DMRs, the mean percentage of CpGs in the intermediate range across each cell type and in CV in term samples was 69% (Figure \@ref(fig:ch3fig4)d). For placental-specific imprinted CpGs, the percentage of CpGs falling into this DNAm range was much more variable. As expected, in the term placental samples, TB and CV had a high percentage (76, 81%, respectively) of CpGs in this DNAm range. SC and EC had a lower, but still a majority, percentage of CpGs in this range (64, 64%, respectively). In contrast, HB cells had almost no CpGs (12%) in this range; almost all CpGs were unmethylated (\<25%). These proportions were similar in first trimester samples, except with EC and SC showing less intermediate methylation and more CpGs with less methylation at placental-specific imprints (Figure \@ref(fig:figb7)A). These results suggest that placental-specific imprinting is maintained primarily in TB, and to a lesser degree EC and SC, and is virtually absent in HB. When considering the parental origin of imprinted DNAm [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016; @zink2018], paternally- methylated regions had more CpGs falling within 25--75% as compared to maternal ones (Figure \@ref(fig:figb7)BC).
 We only estimated this in non-placental specific imprinted DMRs, since almost all validated placental-specific imprinted DMRs are maternally methylated.
 
 DNAm at specific imprinted DMRs was examined.
-As described above, TB and CV had intermediate (\>25, \<75%) DNAm at nearly all CpGs located in placental-specific imprinted regions (Figure \@ref(fig:ch3fig4)d). Most of these CpGs, in contrast, are hypomethylated for HB cells, consistent with this cell type having a different developmental origin than other placental components (embryonic versus extraembryonic). However, at the imprinted DMR associated with the placental-specific expressed microRNA cluster C19MC, this pattern is reversed: HB have hypermethylation at this region (Figure \@ref(fig:ch3fig4)e) as is reported for somatic adult/fetal tissues [@hanna2016].
-For SC and EC, these cell types generally show lower levels of DNAm than TB/CV at the placental-imprinted DMRs, sometimes matching that in HBs and other times showing levels somewhere between HB and TB/CV.
-Such patterns are observed for genes such as *DCAF10* (Figure \@ref(fig:ch3fig4)f), fibroblast growth factors *FGF8*, *FGF12* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S8AB), and at epigenetic regulator *JMJD1C* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S9A).
-However, for a few DMRs, levels of DNAm in SC/EC matched that of TB/CV, such as ones associated with the DNAm maintenance gene *DNMT1* (Figure \@ref(fig:ch3fig2)c) and *FGF14* (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S9B).
-Higher DNAm than TB/CV was only observed for 1 gene (*RASGRF1*, Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S10).
+As described above, TB and CV had intermediate (\>25, \<75%) DNAm at nearly all CpGs located in placental-specific imprinted regions (Figure \@ref(fig:ch3fig4)d). Most of these CpGs, in contrast, are hypomethylated for HB cells, consistent with this cell type having a different developmental origin than other placental components (embryonic versus extraembryonic). However, at the imprinted DMR associated with the placental-specific expressed microRNA cluster C19MC, this pattern is reversed: HB have hypermethylation at this region (Figure \@ref(fig:ch3fig4)e) as is reported for somatic adult/fetal tissues [@hanna2016]. For SC and EC, these cell types generally show lower levels of DNAm than TB/CV at the placental-imprinted DMRs, sometimes matching that in HBs and other times showing levels somewhere between HB and TB/CV. Such patterns are observed for genes such as *DCAF10* (Figure \@ref(fig:ch3fig4)f), fibroblast growth factors *FGF8*, *FGF12* (Figure \@ref(fig:figb8)AB), and at epigenetic regulator *JMJD1C* (Figure \@ref(fig:figb9)A).
+However, for a few DMRs, levels of DNAm in SC/EC matched that of TB/CV, such as ones associated with the DNAm maintenance gene *DNMT1* (Figure \@ref(fig:ch3fig2)c) and *FGF14* (Figure \@ref(fig:figb9)B).
+Higher DNAm than TB/CV was only observed for 1 gene (*RASGRF1*, Figure \@ref(fig:figb10)).
 
-DNAm at repetitive elements, such as Alu and LINE1 elements, can be placental-specific and have been hypothesized to often be important regulatory components of placental processes [@reiss2007].
-To determine if DNAm at repetitive elements is consistent across placental cell populations, we analyzed the subset of 850k CpGs that map to Alu (*n*=15,289) and LINE1 (22,006) elements.
-Compared to CV, TB had lower LINE1 DNAm (mean difference in DNAm=−1.5%, *p*=0.04), and HB had much higher DNAm (+9.7%, *p*\<0.001; Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11A).
-Similar relationships are seen for Alu elements (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11A).
-TB had lower (−1.2%, *p*=0.02), HB had higher (+7.0%, p\<0.001), and EC had higher (+2.1%, *p*\<0.001) DNAm in Alu CpGs, when compared to CV.
-To explore large-scale DNAm differences, we averaged DNAm across all 850k probes and compared each cell type to CV.
-We found these relationships to be similar to those with the subset of repetitive elements probes (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11A).
-HB had higher DNAm compared to CV (+5%, p\<0.001), and all other cell types had lower DNAm (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S8).
-The relationships we found for repetitive elements and global DNAm between cell types and CV were also largely consistent in our first trimester samples (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S8, Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11B).
-To determine genome-wide repetitive element DNAm, we used the random forest -based 'REMP' algorithm [@aryee2014] to predict 438,664 Alu CpGs and 39,136 LINE1 CpGs that are not covered by the EPIC array.
-Relationships between cell types and CV for predicted and non-predicted repetitive elements were mostly the same, except TB DNAm in predicted Alu and LINE1 CpGs was not significantly different compared to CV (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S8, Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S11C).
+DNAm at repetitive elements, such as Alu and LINE1 elements, can be placental-specific and have been hypothesized to often be important regulatory components of placental processes [@reiss2007]. To determine if DNAm at repetitive elements is consistent across placental cell populations, we analyzed the subset of 850k CpGs that map to Alu (*n*=15,289) and LINE1 (22,006) elements. Compared to CV, TB had lower LINE1 DNAm (mean difference in DNAm=−1.5%, *p*=0.04), and HB had much higher DNAm (+9.7%, *p*\<0.001; Figure \@ref(fig:figb11)A). Similar relationships are seen for Alu elements. TB had lower (−1.2%, *p*=0.02), HB had higher (+7.0%, p\<0.001), and EC had higher (+2.1%, *p*\<0.001) DNAm in Alu CpGs, when compared to CV. To explore large-scale DNAm differences, we averaged DNAm across all 850k probes and compared each cell type to CV. We found these relationships to be similar to those with the subset of repetitive elements probes. HB had higher DNAm compared to CV (+5%, p\<0.001), and all other cell types had lower DNAm (Table \@ref(tab:tabb8)). The relationships we found for repetitive elements and global DNAm between cell types and CV were also largely consistent in our first trimester samples (Table \@ref(tab:tabb8), Figure \@ref(fig:figb11)B). To determine genome-wide repetitive element DNAm, we used the random forest -based 'REMP' algorithm [@aryee2014] to predict 438,664 Alu CpGs and 39,136 LINE1 CpGs that are not covered by the EPIC array.
+Relationships between cell types and CV for predicted and non-predicted repetitive elements were mostly the same, except TB DNAm in predicted Alu and LINE1 CpGs was not significantly different compared to CV (Table \@ref(tab:tabb8), Figure \@ref(fig:figb11)C).
 
 ### Cell-specific DNAm dynamics across gestation
 
@@ -230,7 +219,7 @@ All cell type-specific gestational-age dependent DMCs were depleted (Bonferroni 
 
 Using placental cell DNAm profiles as a reference, we assessed cellular composition in CV samples using cellular deconvolution.
 To select cell-type discriminating CpGs, the *pickCompProbes* function from the R package *minfi* [@aryee2014] was used, which takes the top 100 most hypo- and hyper-methylated CpGs ranked by F-test statistic for each cell type. Gestational-age specific references were created for first trimester and term. For first trimester samples, reference probes were selected from all first trimester cell samples, but also term nucleated red blood cells (nRBCs) and eSTB samples were used since these cell types are also present in early gestation [@vento-tormo2018]. For nRBC samples, 11 DNAm profiles from umbilical cord blood from public databases were included [@gervin2019].
-Reference CpGs determined from first trimester (Figure \@ref(fig:ch3fig6)a) and term (Figure \@ref(fig:ch3fig6)b) placental samples were highly cell-specific (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S9 and S10 for first trimester and term respectively).
+Reference CpGs determined from first trimester (Figure \@ref(fig:ch3fig6)a) and term (Figure \@ref(fig:ch3fig6)b) placental samples were highly cell-specific (Table \@ref(tab:tabb9)and \@ref(tab:tabb10) for first trimester and term respectively).
 
 <!--- Insert Figure 6 --->
 
@@ -241,32 +230,28 @@ knitr::include_graphics(here::here('images', 'ch3', 'Figure6.pdf'))
 ```
 
 To determine the best-performing cellular deconvolution method, 1500 in silico bulk mixtures were generated based on our cell data with known cellular composition proportions.
-These deconvolution methods were compared: constrained projection (CP) [@houseman2012], robust partial correlations (RPC) [@teschendorff2017a], and support-vector regression / CIBERSORT (CBS) [@newman2015].
-All three methods were tested using the implementation from the R package *EpiDISH* [@zheng], and the constrained projection approach was used from implementations in both *EpiDISH* and *minfi* [@aryee2014] R packages.
-Performance was high and consistent across algorithms and cell types (*R*^2^=0.88--0.99, RMSE=0.02--0.08, MAE=0.01--0.4; Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S12A; Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S11).
+These deconvolution methods were compared: constrained projection (CP) [@houseman2012], robust partial correlations (RPC) [@teschendorff2017a], and support-vector regression / CIBERSORT (CBS) [@newman2015]. All three methods were tested using the implementation from the R package *EpiDISH* [@zheng], and the constrained projection approach was used from implementations in both *EpiDISH* and *minfi* [@aryee2014] R packages.
+Performance was high and consistent across algorithms and cell types (*R*^2^=0.88--0.99, RMSE=0.02--0.08, MAE=0.01--0.4; Figure \@ref(fig:figb12)A; Table \@ref(tab:tabb11)).
 However, RPC slightly outperformed other approaches (R^2^=0.96, MAE=0.024, RMSE=0.045).
-Biases towards under−/over- estimation for certain cell types were small but were consistent across algorithms (Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S12B): SC tended to be overestimated (mean difference between estimated and actual= +0.33% to 0.98%), HB were underestimated (−0.03% to −0.38%).
+Biases towards under−/over- estimation for certain cell types were small but were consistent across algorithms (Figure \@ref(fig:figb12)B): SC tended to be overestimated (mean difference between estimated and actual= +0.33% to 0.98%), HB were underestimated (−0.03% to −0.38%).
 TB were underestimated (−0.07% to 0.94%), and nRBCs do not show as much bias (+0.03 to −0.21%).
 
 To assess the validity of placental cell deconvolution estimates, we applied deconvolution to previously published placental samples that are enriched for specific cell populations.
-Deconvolution was applied to cultured trophoblast samples (*n*=90) from Yuen et al. 2013 [@yuen2013], that were cultured to 24h (predominantly CTB phenotype) or to 48h, after which many CTB cells have fused into STB; each set of samples was also subjected to varying oxygen levels (1%, 8%, 20%).
-Cultured STB had higher estimated STB relative to sample-matched cultured CTB (Fig. S13A).
-The small changes in STB:CTB between culturing times are consistent with the small DNAm differences that were reported in Yuen 2013 [@yuen2013], and suggest that although fusion of cytotrophoblast was achieved, further culturing would be required to produce a mature STB phenotype akin to term placenta.
-We then applied deconvolution to first, second trimester, and term enzymatically separated mesenchyme (*n*=3) and matched samples of outer TB layer of chorionic villi (*n*=3) from Hanna et al. 2016 [@hanna2016], the latter of which were isolated in the same manner as eSTB in the present study.
-Despite batch effects and array differences (450k vs 850k), the term TB sample was estimated to be mostly syncytiotrophoblast (97%; Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S13B).
+Deconvolution was applied to cultured trophoblast samples (*n*=90) from Yuen et al. 2013 [@yuen2013], that were cultured to 24h (predominantly CTB phenotype) or to 48h, after which many CTB cells have fused into STB; each set of samples was also subjected to varying oxygen levels (1%, 8%, 20%). Cultured STB had higher estimated STB relative to sample-matched cultured CTB (Figure \@ref(fig:figb13)A). The small changes in STB:CTB between culturing times are consistent with the small DNAm differences that were reported in Yuen 2013 [@yuen2013], and suggest that although fusion of cytotrophoblast was achieved, further culturing would be required to produce a mature STB phenotype akin to term placenta. We then applied deconvolution to first, second trimester, and term enzymatically separated mesenchyme (*n*=3) and matched samples of outer TB layer of chorionic villi (*n*=3) from Hanna et al. 2016 [@hanna2016], the latter of which were isolated in the same manner as eSTB in the present study.
+Despite batch effects and array differences (450k vs 850k), the term TB sample was estimated to be mostly syncytiotrophoblast (97%; Figure \@ref(fig:figb13)B).
 Deconvolution estimates for trophoblast isolated from first and second trimester placentas were also mostly TB with some presence of the mesenchymal components, in particular some SC.
 Matched mesenchyme samples, as expected, were enriched for SC, and EC.
 Overall, these findings are consistent with our understanding that enzymatic separation enriches for certain populations but cannot produce homogenous cell populations.
 Lastly, we applied cell deconvolution to chorionic villi samples (*n*=5) that were enriched for large visible stem villi.
-These samples had cell compositions that were heavily enriched for SC (mean=51%, sd=4%), compared to matched "normally" -processed chorionic villi (mean=11%, sd=2%; Additional File [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM1): Figure S13C).
+These samples had cell compositions that were heavily enriched for SC (mean=51%, sd=4%), compared to matched "normally" -processed chorionic villi (mean=11%, sd=2%; Figure \@ref(fig:figb13)C).
 
 RPC cellular deconvolution was applied to our 7 first trimester and 19 term CV samples.
 There was significant gestational-age specific variation in the estimated percentage of eSTB, TB, and SC (Table [3](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Tab3); Figure \@ref(fig:ch3fig6)c).
 eSTB were the most abundant cell type in all (19/19) term samples (mean=58%), whereas SC was the most abundant in most (5/7) first trimester samples (mean=43%).
 There were significant changes from first trimester to term samples: there was a significant mean increase of 23% in eSTB (Bonferroni-adjusted *p*\<0.001), a decrease in SC (−31%; adjusted *p*\<0.001) and a small increase in EC (+5%; adjust *p*\<=0.005).
 A detectable contribution of nRBCs was not estimated in any sample using RPC deconvolution.
-No significant (adjusted *p*\>0.01) differences in cell composition were observed between male (*n*=9) and female (*n*=10) samples (Figure \@ref(fig:ch3fig6)d; Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12), or between European/Caucasian (*n*=11) and East Asian (*n*=6) samples (Figure \@ref(fig:ch3fig6)e; Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12) for term CV.
-Within-trimester gestational age (estimated and reported) was not significantly associated with cell composition (Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7): Table S12), although numbers were small.
+No significant (adjusted *p*\>0.01) differences in cell composition were observed between male (*n*=9) and female (*n*=10) samples (Figure \@ref(fig:ch3fig6)d; Table \@ref(tab:tabb12)), or between European/Caucasian (*n*=11) and East Asian (*n*=6) samples (Figure \@ref(fig:ch3fig6)e) for term CV.
+Within-trimester gestational age (estimated and reported) was not significantly associated with cell composition (Table \@ref(tab:tabb12)), although numbers were small.
 
 <!-- Insert Table 3 -->
 
@@ -393,15 +378,7 @@ An Illumina iScan reader was used to scan the chips and produce raw data files (
 
 ### DNA methylation data processing
 
-To assess various quality metrics, IDAT files were loaded directly into R (v3.6.1) using the *minfi* package (v1.32.0) and *ewastools* [@heiss2018] (v1.6).
-Poor quality and unreliable probes (detection *p*-value \> 0.01, bead count \<3, cross-hybridizing [@zhou2017], probes with SNPs within 5 bp of the CpG site in the probe direction [@zhou2017]), and probes located on sex chromosomes were removed (*n*=109,410).
-Analysis was restricted to a final set of 737,050 autosome probes.
-All samples had high (7500--15,000 average median intensity readings in the methylated and unmethylated channels, and passed manufacturer-determined default thresholds for 17 control probes. The possibility of sample mislabelling was verified comparing reported sex and inferred sex based on X chromosome copy number (*ewastools*) [@heiss2018].
-Identical genotypes between matched cell-sorted and whole chorionic villi samples were verified using the EPIC array's 59 SNP probes (*ewastools*) [@heiss2018].
-This genotype-check also identified a number of first trimester cell-sorted samples with evidence of maternal contamination, which were removed from further analyses (*n*=12).
-Upon inspection of global DNAm patterns with PCA, we identified and removed 2 outlier samples that we suspect were contaminated with cells from other genotype-matched samples.
-Further details on detecting maternal contamination are described in Additional File [2](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM2).
-After quality control and probe filtering, noob [@triche2013] and BMIQ [@teschendorff2013] normalization was applied to the DNAm data.
+To assess various quality metrics, IDAT files were loaded directly into R (v3.6.1) using the *minfi* package (v1.32.0) and *ewastools* [@heiss2018] (v1.6). Poor quality and unreliable probes (detection *p*-value \> 0.01, bead count \<3, cross-hybridizing [@zhou2017], probes with SNPs within 5 bp of the CpG site in the probe direction [@zhou2017]), and probes located on sex chromosomes were removed (*n*=109,410). Analysis was restricted to a final set of 737,050 autosome probes. All samples had high (7500--15,000 average median intensity readings in the methylated and unmethylated channels, and passed manufacturer-determined default thresholds for 17 control probes. The possibility of sample mislabelling was verified comparing reported sex and inferred sex based on X chromosome copy number (*ewastools*) [@heiss2018]. Identical genotypes between matched cell-sorted and whole chorionic villi samples were verified using the EPIC array's 59 SNP probes (*ewastools*) [@heiss2018]. This genotype-check also identified a number of first trimester cell-sorted samples with evidence of maternal contamination, which were removed from further analyses (*n*=12). Upon inspection of global DNAm patterns with PCA, we identified and removed 2 outlier samples that we suspect were contaminated with cells from other genotype-matched samples. After quality control and probe filtering, noob [@triche2013] and BMIQ [@teschendorff2013] normalization was applied to the DNAm data.
 
 ### Differentially methylated CpGs (DMCs) analysis
 
@@ -428,7 +405,7 @@ To account for bias in array-specific coverage towards CpGs lying in promoters, 
 Location data for imprinted regions was created by combining results from five previous human imprinting studies [@hanna2016; @court2014; @sanchez-delgado2016; @zink2018].
 A variety of approaches and technologies were used in these studies, such as whole genome bisulfite sequencing, methyl-sequencing, and Infinium 450k methylation arrays.
 We took outer coordinates for overlapping regions.
-A final list of imprinted regions can be found in Additional File [7](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#MOESM7), Table S7.
+A final list of imprinted regions can be found in Table \@ref(tab:tabb7).
 
 Repetitive element mappings were determined by downloading the "rmsk" track from UCSC genome browser (hg19) and then overlapping these regions with the 850k array CpGs.
 Mean DNAm was calculated by averaging over each set (Alu, LINE1, all CpGs) of CpGs for each sample.
@@ -457,5 +434,3 @@ Because this procedure only ensures that the first set of percentages are unifor
 Performance metrics to compare algorithms were computed using the r package *yardstick* (v0.0.4).
 Linear modelling with Bonferroni- multiple testing adjustment was done to test differences in cell composition by sex and by ethnicity.
 Inferred ethnicity was computed via the R package *planet* (v0.2.0) [@yuan2019], and corroborated with the first 2 principal components of high density (\~2.3 million SNPs) genotyping data
-
-## 
